modules/minegate/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: minegate
  namespace: minegate
  labels:
    app.kubernetes.io/name: minegate
    app.kubernetes.io/component: proxy
  annotations:
    io.cilium/lb-ipam-ips: 10.0.0.199
    lbipam.cilium.io/sharing-key: public-vip
    lbipam.cilium.io/sharing-cross-namespace: "*"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: minegate
    app.kubernetes.io/component: proxy
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      protocol: TCP
    - name: bedrock
      port: 19132
      targetPort: 19132
      protocol: UDP
