modules/minegate/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: route-je
  namespace: minegate
spec:
  parentRefs:
    - name: central-gateway
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - backendRefs:
        - name: minegate
          kind: Service
          port: 25565
